--- a/pom.xml
+++ b/pom.xml
@@ -340,6 +340,48 @@
                                             </artifact>
                                         </artifacts>
                                     </power-server>
+                                    <power-server-cli>
+                                        <name>power-server-cli</name>
+                                        <stereotype>CLI</stereotype>
+                                        <executable>
+                                            <name>power</name>
+                                        </executable>
+                                        <type>BINARY</type>
+                                        <brew>
+                                            <active>RELEASE</active>
+                                            <multiPlatform>true</multiPlatform>
+                                        </brew>
+                                        <sdkman>
+                                            <active>RELEASE</active>
+                                        </sdkman>
+                                        <artifacts>
+                                            <artifact>
+                                                <path>{{artifactsDir}}/{{distributionName}}-{{projectVersion}}-linux-x86_64.tar.gz</path>
+                                                <transform>artifacts/{{distributionName}}-{{projectEffectiveVersion}}-linux-x86_64.tar.gz</transform>
+                                                <platform>linux-x86_64</platform>
+                                            </artifact>
+                                            <!--<artifact>
+                                                <path>
+                                                    {{artifactsDir}}/{{distributionName}}-{{projectVersion}}-windows-x86_64.zip
+                                                </path>
+                                                <transform>
+                                                    artifacts/{{distributionName}}-{{projectEffectiveVersion}}-windows-x86_64.zip
+                                                </transform>
+                                                <platform>windows-x86_64</platform>
+                                            </artifact>-->
+                                            <artifact>
+                                                <path>{{artifactsDir}}/{{distributionName}}-{{projectVersion}}-osx-x86_64.tar.gz</path>
+                                                <transform>artifacts/{{distributionName}}-{{projectEffectiveVersion}}-osx-x86_64.tar.gz</transform>
+                                                <platform>osx-x86_64</platform>
+                                            </artifact>
+                                            <artifact>
+                                                <path>{{artifactsDir}}/{{distributionName}}-{{projectVersion}}-osx-aarch_64.tar.gz</path>
+                                                <transform>
+                                                    {{artifactsDir}}/{{distributionName}}-{{projectEffectiveVersion}}-osx-aarch_64.tar.gz</transform>
+                                                <platform>osx-aarch_64</platform>
+                                            </artifact>
+                                        </artifacts>
+                                    </power-server-cli>
                                 </distributions>
                             </jreleaser>
                         </configuration>
