--- a/.github/workflows/native-build.yml
+++ b/.github/workflows/native-build.yml
@@ -42,14 +42,10 @@ jobs:
         run: mvn install -DskipTests
 
       - name: 'Build Native Image'
-        run: |
-#          mvn -ntp -B --file pom.xml -Pnative package -DskipTests -pl server,cli
-          mvn -ntp -B --file pom.xml -Pnative package -DskipTests -pl server
+        run: mvn -ntp -B --file pom.xml -Pnative package -DskipTests -pl server
 
       - name: 'Create distribution'
-        run: |
-#          mvn -ntp -B --file pom.xml -Pdist package -DskipTests -pl server,cli
-          mvn -ntp -B --file pom.xml -Pdist package -DskipTests -pl server
+        run: mvn -ntp -B --file pom.xml -Pdist package -DskipTests -pl server
 
       - name: 'Upload build artifact'
         uses: actions/upload-artifact@v5
@@ -57,4 +53,3 @@ jobs:
           name: power-server-${{ runner.os }}-${{ runner.arch }}
           path: |
             server/target/distributions/*.tar.gz
-#            cli/target/distributions/*.tar.gz
