--- a/server/src/main/resources/application.properties
+++ b/server/src/main/resources/application.properties
@@ -2,6 +2,7 @@ quarkus.http.port=20432
 quarkus.datasource.jdbc.url=jdbc:sqlite:${power-server.db.backup.location}
 quarkus.datasource.db-kind=sqlite
 quarkus.datasource.jdbc.min-size=1
+quarkus.datasource.jdbc.max-size=1
 
 power-server.db.backup.period=5m
 power-server.db.backup.location=${HOME}/.power-server/db.sqlite
