refactor: use proper property

--- a/cli/src/main/resources/application.properties
+++ b/cli/src/main/resources/application.properties
@@ -7,4 +7,4 @@ power-server.db.backup.period=5m
 power-server.db.backup.location=${HOME}/.power-server/db.sqlite
 
 # Only use this property once to create the initial database
-quarkus.hibernate-orm.database.generation=drop-and-create
+quarkus.hibernate-orm.schema-management.strategy=drop-and-create
