--- a/server/src/main/resources/application.properties
+++ b/server/src/main/resources/application.properties
@@ -8,4 +8,4 @@ power-server.db.backup.period=5m
 power-server.db.backup.location=${HOME}/.power-server/db.sqlite
 
 # Only use this property once to create the initial database
-# quarkus.hibernate-orm.database.generation=create
+# quarkus.hibernate-orm.schema-management.strategy=drop-and-create
