--- a/.github/workflows/weekly-native-build.yml
+++ b/.github/workflows/weekly-native-build.yml
@@ -7,7 +7,7 @@ jobs:
     strategy:
       fail-fast: true
       matrix:
-        os: [ ubuntu-latest, macOS-latest, macos-14 ]
+        os: [ ubuntu-latest, macos-latest, macos-15-intel, macos-26 ]
     uses: ./.github/workflows/native-build.yml
     with:
       platform: ${{ matrix.os }}
