--- a/.github/workflows/weekly-native-build.yml
+++ b/.github/workflows/weekly-native-build.yml
@@ -9,7 +9,7 @@ jobs:
     strategy:
       fail-fast: true
       matrix:
-        os: [ ubuntu-latest, macos-latest, macos-15-intel, macos-26 ]
+        os: [ ubuntu-latest, macos-latest, macos-15-intel ]
     uses: ./.github/workflows/native-build.yml
     with:
       platform: ${{ matrix.os }}
