--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -81,7 +81,7 @@ jobs:
     needs: [maven-release]
     strategy:
       matrix:
-        os: [ ubuntu-latest, macOS-latest, macos-13 ]
+        os: [ ubuntu-latest, macos-latest, macos-15-intel ]
     uses: ./.github/workflows/native-build.yml
     with:
       platform: ${{ matrix.os }}
