--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -23,7 +23,7 @@ jobs:
     strategy:
       fail-fast: true
       matrix:
-        os: [ ubuntu-latest, macOS-latest, macos-14 ]
+        os: [ ubuntu-latest, macos-latest, macos-15-intel ]
     runs-on: ${{ matrix.os }}
 
     steps:
